// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apply icon-prefix prop to error-icon 1`] = `
<div class="ghb-image">
  <div class="ghb-image__error"><i class="my-icon my-icon-error ghb-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`apply icon-prefix prop to loading-icon 1`] = `
<div class="ghb-image"><img class="ghb-image__img">
  <div class="ghb-image__loading"><i class="my-icon my-icon-success ghb-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`default slot 1`] = `
<div class="ghb-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img">
  <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
      <!----></i></div>Custom Default
</div>
`;

exports[`error-icon prop 1`] = `
<div class="ghb-image">
  <div class="ghb-image__error"><i class="ghb-icon ghb-icon-error ghb-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy load 1`] = `
<div class="ghb-image"><img class="ghb-image__img">
  <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load error event 1`] = `
<div class="ghb-image">
  <div class="ghb-image__error"><i class="ghb-icon ghb-icon-photo-fail ghb-image__error-icon">
      <!----></i></div>
</div>
`;

exports[`lazy-load load event 1`] = `<div class="ghb-image"><img class="ghb-image__img"></div>`;

exports[`load event 1`] = `<div class="ghb-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img"></div>`;

exports[`load event 2`] = `
<div class="ghb-image"><img src="" class="ghb-image__img">
  <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`loading-icon prop 1`] = `
<div class="ghb-image"><img class="ghb-image__img">
  <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-success ghb-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`radius prop 1`] = `
<div class="ghb-image" style="overflow: hidden; border-radius: 3px;"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img">
  <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
      <!----></i></div>
</div>
`;

exports[`show-error prop 1`] = `<div class="ghb-image"></div>`;

exports[`show-loading prop 1`] = `<div class="ghb-image"><img class="ghb-image__img"></div>`;
